# boxrec-heuristic

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: betfair.rs  boxer.rs  boxrec.rs  caching.rs  config.rs  discord.rs  lib.rs  main.rs
