[package]
name = "boxrec_tool"
version = "1.0.0"
authors = ["alpha-kilo-tango <atk@aaathats3as.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3"
reqwest = { version = "0.10", features = ["blocking", "cookies"] }
scraper = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
trim-in-place = "0.1"
