[package]
name = "boxrec_tool"
version = "1.0.0"
authors = ["alpha-tango-kilo <atk@aaathats3as.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/alpha-tango-kilo/boxrec-heuristic"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3"
scraper = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
trim-in-place = "0.1"

[dependencies.reqwest]
version = "0.10"
default_features = false
features = [
    "blocking",
    "cookies",
    "rustls-tls",
]

[dependencies.tokio]
version = "0.2"
default_features = false
features = [
    "macros",
    "rt-core", # For spawn
    "time",
]

[dependencies.serenity]
version = "0.9.0-rc.0"
default_features = false
features = [
    "builder", # For making embeds
    "cache",
    "client",
    "gateway",
    "model",
    "rustls_backend",
]
